--- a/src/components/tasks/event-task/event-task.html
+++ b/src/components/tasks/event-task/event-task.html
@@ -1,4 +1,4 @@
-<!-- Generated template for the EventTaskComponent component -->
 <div>
   EventTaskComponent
+  <image-upload></image-upload>
 </div>
