--- a/src/components/user-profile/info/info.scss
+++ b/src/components/user-profile/info/info.scss
@@ -1,11 +1,11 @@
 @import "../../../theme/variables";
 
 info {
-  .label {
-    color: $main-color;
-    font-size: 14px;
-  }
   .card-inner {
+    .label {
+      color: $main-color;
+      font-size: 14px;
+    }
     .item-block {
       padding: 0;
       font-size: 14px;
@@ -21,5 +21,7 @@ info {
     background: #f6f6f6;
     font-size: 14px;
     padding: 0 8px;
+    flex: 1;
+    max-width: 100%;
   }
 }
