--- a/src/components/image-upload/image-upload.html
+++ b/src/components/image-upload/image-upload.html
@@ -1,3 +1,4 @@
 <div>
   <button ion-button full (click)="presentActionSheet()">Lets take a picture!</button>
+  <img [src]="captureDataUrl" *ngIf="captureDataUrl"/>
 </div>
