--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
-<ion-menu side="right" type="reveal" [content]="content" class="side-menu">
+<ion-menu type="reveal" [content]="content" class="side-menu">
   <ion-header>
-    <div class="profile-page-image" margin-top text-center>
+    <div class="profile-image" margin-top text-center>
       <img src="https://s3.amazonaws.com/ionic-io-static/9TxJELnATnW9H3MZZfdG_Profile_avatar_placeholder_large.png"
            width="30%" height="auto" style="display: block; margin: auto;">
       <h4>Lucy Campbell</h4>
