--- a/src/components/image-upload/image-upload.scss
+++ b/src/components/image-upload/image-upload.scss
@@ -1,3 +1,12 @@
 image-upload {
-
+  .image-wrapper {
+    position: relative;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    fa-icon {
+      font-size: 26px;
+    }
+  }
 }
