--- a/src/theme/global.scss
+++ b/src/theme/global.scss
@@ -19,18 +19,22 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 p, .card p, .item p {
   color: $text-color;
+}
 
+fa-icon, ion-icon {
+  color: $main-color;
 }
 
 ion-card.card {
-  -webkit-box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+  margin-bottom: 20px;
 }
 
 .header .toolbar-background {
   background: $white-color;
   border: none;
 }
+
 /***** Side Menu *****/
 .side-menu {
   .content {
@@ -50,6 +54,7 @@ ion-card.card {
     }
   }
 }
+
 /***** Sub Nav *****/
 .sub-nav {
   .tabbar {
@@ -63,13 +68,15 @@ ion-card.card {
     }
   }
 }
+
 /***** Form, inputs, fields *****/
 .default-select {
   .select {
     border: 1px solid;
-    padding: 8px;
+    padding: 6px 8px;
     font-size: 14px;
     color: $main-color;
+    background: $input-bg-color;
     .select-icon {
       width: 16px;
       .select-icon-inner {
@@ -83,9 +90,28 @@ ion-card.card {
   }
 }
 
+.item.item-block {
+  .text-input {
+    padding: 6px 8px;
+    margin: 0;
+    background: $input-bg-color;
+    font-size: 14px;
+  }
+
+  .item-inner {
+    border-bottom: none !important;
+    padding-right: 0;
+  }
+}
+
+/**** General styles ****/
 hr.line-shadow {
   -webkit-box-shadow: 0 1px 5px 2px rgba(153, 153, 153, 0.3);
   box-shadow: 0 1px 5px 2px rgba(153, 153, 153, 0.3);
   background-color: rgba(0, 0, 0, 0.2);
+}
+
+.item-input.item-input-has-focus {
+  box-shadow: none;
 }
 
