--- a/src/theme/modal.scss
+++ b/src/theme/modal.scss
@@ -1,10 +1,14 @@
 @import "./variables";
+
 ion-modal {
   background: rgba(0, 0, 0, 0.3);
+  padding: 45px 20px;
   .ion-modal-header {
     .toolbar-title {
       color: $main-color;
-      margin: 25px 0;
+      text-align: center;
+      margin: 15px 0 10px;
+      padding: 0;
     }
     .icon-close {
       color: $main-color;
@@ -14,10 +18,30 @@ ion-modal {
       top: 10px;
     }
   }
-
+  /****** Interests Genres modal ******/
   .genres-modal {
     .block-wrapper {
       margin-top: 40px;
+    }
+  }
+  /***** Interests & Networks icons modal ****/
+  .list-icons-modal {
+    .icon {
+      font-size: 46px;
+      color: $main-color;
+    }
+    .subtitle {
+      margin-top: 10px;
+    }
+  }
+  /***** Network Confirm Account modal ****/
+  .network-modal {
+    .icon {
+      font-size: 46px;
+      color: $main-color;
+    }
+    .input {
+      border: 1px solid $main-color;
     }
   }
 }
