--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -1,3 +1,51 @@
 page-welcome {
+  .swiper-container-horizontal > .swiper-pagination-bullets {
+    top: 40%
+  }
+  .swiper-pagination-bullet {
+    background: #fff;
+    opacity: .6;
+  }
+  .swiper-pagination-bullet-active {
+    opacity: 1;
+  }
+  .toolbar {
+    padding: 0;
+    .toolbar-background {
+      border: none;
+    }
+    .col {
+      padding: 0;
+    }
+    .button {
+      margin: 0;
+    }
+  }
 
+  .slide {
+    background: #364f9f;
+    .info-block {
+      position: absolute;
+      top: 70px;
+    }
+    .icon {
+      width: 40px;
+      height: 40px;
+      border: 1px solid #fff;
+      display: block;
+      margin: 0 auto;
+      text-align: center;
+      border-radius: 50%;
+      fa-icon {
+        color: #fff;
+        font-size: 22px;
+        margin-top: 8px;
+      }
+    }
+    h2 {
+      color: #fff;
+      text-align: center;
+      padding: 0 30px;
+    }
+  }
 }
