add last change(style, components, add plugin deeplink

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <ion-menu type="reveal" [content]="content" class="side-menu">
   <ion-header>
     <div class="profile-image" margin-top text-center>
-      <img src="https://s3.amazonaws.com/ionic-io-static/9TxJELnATnW9H3MZZfdG_Profile_avatar_placeholder_large.png"
+      <img class="picture" src="https://s3.amazonaws.com/ionic-io-static/9TxJELnATnW9H3MZZfdG_Profile_avatar_placeholder_large.png"
            width="30%" height="auto" style="display: block; margin: auto;">
       <h4>Lucy Campbell</h4>
     </div>
