--- a/src/components/tasks/event-task/event-task.html
+++ b/src/components/tasks/event-task/event-task.html
@@ -1,4 +1,15 @@
-<div>
-  EventTaskComponent
-  <image-upload></image-upload>
+<div class="task-detail">
+  <h1>Task Title</h1>
+  <div class="task-description">
+    <label class="label-title">Breif/Description</label>
+    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+      praesentium voluptatum deleniti atque corrupti quos dolores et
+      quas molestias excepturi At vero eos et accusamus et iusto odio dignissimos
+      ducimus qui blanditiis praesentium voluptatum deleniti atque
+      corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate
+      non molestias ducimus qui blanditiis praesentium voluptatum deleniti
+      atque corrupti quos.</p>
+  </div>
+  <hr/>
+  <div class="location"></div>
 </div>
