--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -12,15 +12,19 @@ $fa-font-path: $font-path;
 //  App LineUp Mobile Theme Colors
 // --------------------------------------------------
 $main-color: #232e61;
+$text-grey-color: #6d7a9d;
 $white-color: #FFF;
 $text-color: #242424;
 
 $body-bg-gradient-color-1: #1e5799;
 $body-bg-gradient-color-2:  #a5c9e5;
-$input-bg-color: #f6f6f6;
+$grey-bg-color: #f6f6f6;
 
 $side-menu-color: #dddddd;
 $sub-nav-color: #353535;
+
+$shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+
 
 
 $hover-color: #F5F5F5;
@@ -28,7 +32,7 @@ $primary-color: #024a88;
 $success-color: #2d922d;
 $info-color: #248dad;
 $warning-color: #f79a17;
-$danger-color: #bf1725;
+$danger-color: #f76b6c;
 
 // Named Color Variables
 // --------------------------------------------------
@@ -40,9 +44,9 @@ $danger-color: #bf1725;
 
 $colors: (
   primary:    #232e61,
-  //primary:    #488aff,
   secondary:  #32db64,
-  danger:     #f53d3d,
+  danger:     #f76b6c,
+  success:    #0c7000,
   light:      #f4f4f4,
   dark:       #222
 );
