--- a/src/pages/auth/register/register.scss
+++ b/src/pages/auth/register/register.scss
@@ -1,3 +1,52 @@
+@import "../../../theme/variables";
 page-register {
+  .content {
+    background-color: #364f9f;
+  }
+}
 
+.content-inner {
+  padding: 25% 10% 0;
+  text-align: center;
+  ion-list {
+    margin: 0 0 25px;
+  }
+  .logo {
+    width: 150px;
+    margin-bottom: 20px;
+  }
+}
+
+.auth-form {
+  .item.item-block {
+    padding-left: 0;
+    .text-input {
+      background: #fff;
+      color: $main-color;
+      width: 100%;
+      font-family: $font-family-medium;
+      &::-moz-placeholder {
+        color: $main-color;
+      }
+      &:-ms-input-placeholder {
+        color: $main-color;
+      }
+      &::-webkit-input-placeholder {
+        color: $main-color;
+      }
+    }
+  }
+  .btn-link {
+    color: #fff;
+    font-weight: bold;
+    margin-top: 20px;
+    display: block;
+  }
+  .error {
+    display: block;
+    text-align: left;
+    background: #fff;
+    font-size: 11px;
+    font-weight: bold;
+  }
 }
