add last general changes

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,4 +1,5 @@
 // App Global Sass
 // --------------------------------------------------
-@import "../theme/modal";
+@import "../theme/font";
 @import "../theme/global";
+@import "../theme/modal";
