--- a/src/components/tasks/event-task/event-task.html
+++ b/src/components/tasks/event-task/event-task.html
@@ -12,4 +12,26 @@
   </div>
   <hr/>
   <div class="location"></div>
+  <div class="due-date-section">
+    <ion-row>
+      <fa-icon name="clock-o"></fa-icon>
+      <ion-col>
+        <label class="label-title">Time:</label>
+        <p>00:00</p>
+      </ion-col>
+      <ion-col>
+        <label class="label-title">Date:</label>
+        <p>00/00/2017</p>
+      </ion-col>
+    </ion-row>
+  </div>
+  <div class="reward-section">
+    <ion-row>
+      <ion-icon name="star"></ion-icon>
+      <ion-col>
+        <label class="label-title">Reward</label>
+        <p>Free Entry on list</p>
+      </ion-col>
+    </ion-row>
+  </div>
 </div>
