--- a/src/components/tasks/poll-survey-task/poll-survey-task.scss
+++ b/src/components/tasks/poll-survey-task/poll-survey-task.scss
@@ -11,4 +11,41 @@ poll-survey-task {
     width: 100%;
     min-width: 100%;
   }
+  .checkbox {
+    .checkbox-icon {
+      border-radius: 0;
+      margin: 0 15px 0 0;
+      width: 24px;
+      height: 24px;
+      .checkbox-inner {
+        left: 8px;
+        top: 5px;
+        width: 5px;
+        height: 12px;
+        border-width: 2px;
+        border-top-width: 0;
+        border-left-width: 0;
+      }
+    }
+  }
+  .radio-group {
+    .input-wrapper {
+      order: 1;
+    }
+    .radio {
+      border: 1px solid;
+      margin: 0 15px 0 0;
+      width: 24px;
+      height: 24px;
+      .radio-checked {
+        background: red;
+        width: 100%;
+        height: 100%;
+        .radio-inner {
+          left: 8px;
+          border-color: #fff;
+        }
+      }
+    }
+  }
 }
