--- a/src/theme/global.scss
+++ b/src/theme/global.scss
@@ -8,17 +8,19 @@ html {
 body {
   background: $white-color;
   height: 100%;
-  //font-family: $font-family;
+  font-family: $font-family-light;
   font-size: 14px;
   color: $main-color;
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   color: $main-color;
+  font-family: $font-family-title;
 }
 
 p, .card p, .item p {
   color: $main-color;
+  font-family: $font-family-light;
 }
 
 fa-icon, ion-icon {
@@ -33,6 +35,9 @@ ion-card.card {
   box-shadow: $shadow;
   margin-bottom: 20px;
 
+  ion-card-header {
+    padding-bottom: 8px;
+  }
   .card-date {
     color: $text-grey-color;
     display: block;
@@ -108,8 +113,8 @@ ion-card.card {
     margin: 0;
     background: $grey-bg-color;
     font-size: 14px;
+    width: 100%;
   }
-
   .item-inner {
     border-bottom: none !important;
     padding-right: 0;
@@ -137,6 +142,17 @@ img.picture {
 }
 
 .button {
+  text-transform: capitalize;
   border-radius: 0;
+  font-family: $font-family-medium;
+}
+
+.loading-wrapper {
+  .loading-content {
+    color: $main-color;
+  }
+  .spinner-bubbles circle {
+    fill: $main-color;
+  }
 }
 
