--- a/src/components/tasks/create-task/create-task-modal/create-task-modal.html
+++ b/src/components/tasks/create-task/create-task-modal/create-task-modal.html
@@ -17,7 +17,7 @@
       </ion-col>
     </ion-row>
   </div>
-  <ion-item no-padding>
+  <ion-item no-padding class="row-caption">
     <ion-label stacked>Caption & Tags</ion-label>
     <ion-textarea></ion-textarea>
   </ion-item>
