--- a/src/components/tasks/post-task/post-task.html
+++ b/src/components/tasks/post-task/post-task.html
@@ -1,4 +1,50 @@
-<!-- Generated template for the PostTaskComponent component -->
-<div>
-  PostTaskComponent
+<div class="row-description">
+  <label class="label-title">What to Post</label>
+  <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blan-
+    ditiis praesentium voluptatum deleniti atque corrupti quos dolores et</p>
 </div>
+<div class="row-platform">
+  <label class="label-title">Social Platform(s)</label>
+  <p>Instagram</p>
+</div>
+<div class="row-tags">
+  <label class="label-title">Tags</label>
+  <p>#hashtag, #hashtag, #hashtag, @tag</p>
+</div>
+<div class="row-images">
+  <label class="label-title">Image(s) To Post</label>
+  <ion-row>
+    <ion-col>
+      <img src="../../assets/img/app/default.png"/>
+    </ion-col>
+    <ion-col>
+      <img src="../../assets/img/app/default.png"/>
+    </ion-col>
+    <ion-col>
+      <img src="../../assets/img/app/default.png"/>
+    </ion-col>
+  </ion-row>
+</div>
+<div class="row-due-date">
+  <label class="label-title">When To Post</label>
+  <ion-row>
+    <fa-icon name="clock-o"></fa-icon>
+    <ion-col>
+      <label class="label-title">Date:</label>
+      <p>00/00/2017</p>
+    </ion-col>
+    <ion-col>
+      <label class="label-title">Time:</label>
+      <p>00:00</p>
+    </ion-col>
+  </ion-row>
+</div>
+<ion-row class="row-reward">
+  <ion-icon name="star"></ion-icon>
+  <ion-col>
+    <label class="label-title">Reward</label>
+    <p>$00.00</p>
+  </ion-col>
+</ion-row>
+<button ion-button full>Confirm Completion</button>
+
