--- a/src/components/tasks/share-task/share-task.html
+++ b/src/components/tasks/share-task/share-task.html
@@ -1,4 +1,26 @@
-<!-- Generated template for the ShareTaskComponent component -->
-<div>
-  ShareTaskComponent
+<div class="row-platform">
+  <label class="label-title">Social Platform(s)</label>
+  <p>Facebook</p>
+</div><div class="row-platform">
+  <label class="label-title">Post(s) to Share</label>
+  <p>https://www.facebook.com/link</p>
 </div>
+<ion-row class="row-due-date">
+  <fa-icon name="clock-o"></fa-icon>
+  <ion-col>
+    <label class="label-title">Date:</label>
+    <p>00/00/2017</p>
+  </ion-col>
+  <ion-col>
+    <label class="label-title">Time:</label>
+    <p>00:00</p>
+  </ion-col>
+</ion-row>
+<ion-row class="row-reward">
+  <ion-icon name="star"></ion-icon>
+  <ion-col>
+    <label class="label-title">Reward</label>
+    <p>Free Entry on list</p>
+  </ion-col>
+</ion-row>
+<button ion-button full>Share Post</button>
