--- a/src/components/tasks/event-task/event-task.html
+++ b/src/components/tasks/event-task/event-task.html
@@ -1,37 +1,26 @@
-<div class="task-detail">
-  <h1>Task Title</h1>
-  <div class="task-description">
-    <label class="label-title">Breif/Description</label>
-    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-      praesentium voluptatum deleniti atque corrupti quos dolores et
-      quas molestias excepturi At vero eos et accusamus et iusto odio dignissimos
-      ducimus qui blanditiis praesentium voluptatum deleniti atque
-      corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate
-      non molestias ducimus qui blanditiis praesentium voluptatum deleniti
-      atque corrupti quos.</p>
-  </div>
-  <hr/>
-  <div class="location"></div>
-  <div class="due-date-section">
-    <ion-row>
-      <fa-icon name="clock-o"></fa-icon>
-      <ion-col>
-        <label class="label-title">Time:</label>
-        <p>00:00</p>
-      </ion-col>
-      <ion-col>
-        <label class="label-title">Date:</label>
-        <p>00/00/2017</p>
-      </ion-col>
-    </ion-row>
-  </div>
-  <div class="reward-section">
-    <ion-row>
-      <ion-icon name="star"></ion-icon>
-      <ion-col>
-        <label class="label-title">Reward</label>
-        <p>Free Entry on list</p>
-      </ion-col>
-    </ion-row>
-  </div>
-</div>
+<ion-row class="row-location">
+  <fa-icon name="map-marker"></fa-icon>
+  <ion-col>
+    <label class="label-title">Event Location</label>
+    <p>King Street, Newtown</p>
+    <p>King St, Sydney, Australia 2042</p>
+  </ion-col>
+</ion-row>
+<ion-row class="row-due-date">
+  <fa-icon name="clock-o"></fa-icon>
+  <ion-col>
+    <label class="label-title">Date:</label>
+    <p>00/00/2017</p>
+  </ion-col>
+  <ion-col>
+    <label class="label-title">Time:</label>
+    <p>00:00</p>
+  </ion-col>
+</ion-row>
+<ion-row class="row-reward">
+  <ion-icon name="star"></ion-icon>
+  <ion-col>
+    <label class="label-title">Reward</label>
+    <p>Free Entry on list</p>
+  </ion-col>
+</ion-row>
