--- a/src/components/tasks/poll-survey-task/poll-survey-task.scss
+++ b/src/components/tasks/poll-survey-task/poll-survey-task.scss
@@ -1,4 +1,23 @@
+@import "../../../theme/variables";
+
 poll-survey-task {
+  .poll-card {
+    padding: 20px 0;
+    margin-top: 30px;
+    box-shadow: $shadow;
+  }
+  .answer-section {
+    border-top: $border;
+    padding-top: 25px;
+    margin-top: 40px;
+
+    .wrapper {
+      margin-bottom: 35px;
+    }
+    h5 {
+      margin-bottom: 0;
+    }
+  }
   .one-to-ten {
     .item {
       width: 20%;
@@ -11,12 +30,18 @@ poll-survey-task {
     width: 100%;
     min-width: 100%;
   }
+  .checkbox .checkbox-icon,
+  .radio-group .radio {
+    border: 1px solid $main-color;
+    border-radius: 0;
+    margin: 0 15px 0 0;
+    width: 24px;
+    height: 24px;
+    background: $grey-bg-color;
+  }
   .checkbox {
-    .checkbox-icon {
-      border-radius: 0;
-      margin: 0 15px 0 0;
-      width: 24px;
-      height: 24px;
+    .checkbox-checked {
+      background: $main-color;
       .checkbox-inner {
         left: 8px;
         top: 5px;
@@ -32,19 +57,13 @@ poll-survey-task {
     .input-wrapper {
       order: 1;
     }
-    .radio {
-      border: 1px solid;
-      margin: 0 15px 0 0;
-      width: 24px;
-      height: 24px;
-      .radio-checked {
-        background: red;
-        width: 100%;
-        height: 100%;
-        .radio-inner {
-          left: 8px;
-          border-color: #fff;
-        }
+    .radio-checked {
+      background: $main-color;
+      width: 100%;
+      height: 100%;
+      .radio-inner {
+        left: 8px;
+        border-color: #fff;
       }
     }
   }
